--- a/new.html
+++ b/new.html
@@ -98,7 +98,7 @@
       </div>
     </div>
     <div class="col mb-4">
-      <div class="card" style="width:30rem; pt-4">
+      <div class="card" style="width:30rem;">
         <img src="image/komodo.jpg" class="card-img-top" alt="komodo">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
