--- a/new.html
+++ b/new.html
@@ -93,7 +93,7 @@
         <img src="image/kuta.jpg" class="card-img-top" alt="bali">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content.</p>
         </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
         <img src="image/komodo.jpg" class="card-img-top" alt="komodo">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content.</p>
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@
         <img src="image/candi.jpg" class="card-img-top" alt="air">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content.</p>
         </div>
       </div>
     </div>
@@ -133,6 +133,9 @@
   <!--listjourney-->
   
    <div class="container">
+    <nav class="navbar mb-3">
+      <h3 class="mx-auto text-danger">TESTIMONIAL</h3>
+     </nav>
    <ul class="list-unstyled">
     <li class="media">
       <img src="woman.png" class="mr-3" alt="woman">
@@ -159,13 +162,31 @@
 </div>
 <!-- 21:9 aspect ratio -->
 <div class="container">
+  <nav class="navbar mb-3">
+    <h3 class="mx-auto text-danger">Journey in Moving Frames </h3>
+   </nav>
 <div class="embed-responsive embed-responsive-21by9">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/LCqK7wZd2Pk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
 </div>
 
  <!--endjourney-->
-  
+ 
+
+  <!-- Footer -->
+<footer class="page-footer font-small cyan darken-3">
+
+  <!-- Footer Elements -->
+
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://github.com/180485"> ISMI ANDHYKAWATY</a>
+  </div>
+  <!-- Copyright -->
+
+
+
  
  <!-- Optional JavaScript; choose one of the two! -->
  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
